--- a/src/app.css
+++ b/src/app.css
@@ -9,6 +9,12 @@ body {
 }
 **/
 
+@media (min-width:768px) {
+  .custom-height-md {
+    @apply h-[16.666vh];
+  }
+}
+
 @font-face {
      font-family: 'IBM Plex Mono';
   src: url('/src/fonts/IBMPlexMono/IBMPlexMono-Regular.ttf') format('truetype');
